@@ -22,3 +22,5 @@
 |<TeX4ht copyright|>
 \immediate\write-1{version |version}
 >>>
+
+% There are two copies of this in tex4ht-mktex.tex.
