@@ -1,38 +1,16 @@
+% $Id$
 % (1)  latex tex4ht-mkht      
 % (2)  perl -c mk4ht.perl                (checking correctness)
 % (3)  latex mkht-scripts.4ht
-%
-% or
-%
+%    or
 % (1) xhlatex tex4ht-mkht "html,3" 
 % (2) perl -c mk4ht.perl
 % (3) xhlatex mkht-scripts.4ht "html,3"
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% tex4ht-mkht.tex                                        %
-% Copyright (C) 1997--           Eitan M. Gurari         %
-%                                                        %
-% This work may be distributed and/or modified under the %
-% conditions of the LaTeX Project Public License, either %
-% version 1.3 of this license or (at your option) any    %
-% later version. The latest version of this license is   %
-% in                                                     %
-%   http://www.latex-project.org/lppl.txt                %
-% and version 1.3 or later is part of all distributions  %
-% of LaTeX version 2003/12/01 or later.                  %
-%                                                        %
-% This work has the LPPL maintenance status "maintained".%
-%                                                        %
-% The Current Maintainer of this work                    %
-% is the TeX4ht Project.                                 %
-%                                                        %
-% If you modify this file your changing the signature    %
-% in \message{(signature)} below will be appreciated.    %
-%                                                        %
-%                                        tex4ht@tug.org  %
-%                             http://www.tug.org/tex4ht  %
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
+%
+% Copyright (C) 2009, 2010 TeX Users Group.
+% Copyright (C) 1997--2009 Eitan M. Gurari
+% Released under LPPL 1.3c+.
+% See tex4ht-cpright.tex for license text.
 
 \documentclass{article}
    \usepackage{url}
@@ -50,20 +28,7 @@
 
 %%%%%%%%%%%%%%%%%%%%% definitions %%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\newcount\tmpcnt  \tmpcnt\time  \divide\tmpcnt  60
-\edef\temp{\the\tmpcnt}
-\multiply\tmpcnt  -60 \advance\tmpcnt  \time
-
-% \edef\version{\the\year-\ifnum \month<10 0\fi
-%   \the\month-\ifnum \day<10 0\fi\the\day
-%    -\ifnum \temp<10 0\fi \temp
-%    :\ifnum \tmpcnt<10 0\fi\the\tmpcnt}
-
-\edef\version{Version 1.1}
-\def\CopyYear.#1.{%
-   \ifnum #1=\year #1\space\space\space\space\space\space
-    \else          #1--\the\year\fi
-}
+\input{common}
 
 \def\mkhtNote{
 
@@ -268,7 +233,7 @@ tex  |<@|>5 |<'|>|<tex definitions|>|<get parameters|>|empty>>>
 
 \<def script\><<<-
 %%%%%%%%%%%%%%%%%%%%
-\section{TeXinfo}
+\section{Texinfo}
 %%%%%%%%%%%%%%%%%%%%
 
 The loading of tex4ht takes place at the @rm command at the end of the
@@ -1018,13 +983,12 @@ against that file.
 \section{mkht.4ht}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-
-
 \<mkht\><<<-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% mkht.4ht                              ?version %
-% Copyright (C) ?CopyYear.1997.       Eitan M. Gurari         %
+% mkht.4ht (?version), generated from ?jobname.tex
+% Copyright (C) 2009, 2010 TeX Users Group.
+% Copyright (C) ?CopyYear.1997. Eitan M. Gurari
 ?<TeX4ht copyright?>
+\immediate\write-1{version \ifx \JOBNAME\UnDefined ?version\else |version\fi}
 
 \def\exit{\documentclass{article}\begin{document}\end{document}\endinput}
 \bgroup
@@ -1250,13 +1214,10 @@ shebang line, the defaul shell (which can be anything) is used.
 \section{mkht-scripts.4ht}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-
-
-
 \<mkht-scripts\><<<-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% mkht-scripts.4ht                      ?version %
-% Copyright (C) ?CopyYear.2000.       Eitan M. Gurari         %
+% mkht-scripts.4ht (?version), generated from ?jobname.tex
+% Copyright (C) 2009, 2010 TeX Users Group.
+% Copyright (C) ?CopyYear.200. Eitan M. Gurari
 ?<TeX4ht copyright?>
 
 \ifx \JOBNAME\UnDef
@@ -1841,68 +1802,49 @@ print "  clean.htlatex     lg tmp\n";
 \immediate\write16{--------------------------------------------------------}
 ->>>
 
+% The - at the end of the first line prevents us from using tex4ht-cpright.tex.
 \<TeX4ht copyright\><<<-
-%                                                        %
-% This work may be distributed and/or modified under the %
-% conditions of the LaTeX Project Public License, either %
-% version 1.3 of this license or (at your option) any    %
-% later version. The latest version of this license is   %
-% in                                                     %
-%   http://www.latex-project.org/lppl.txt                %
-% and version 1.3 or later is part of all distributions  %
-% of LaTeX version 2003/12/01 or later.                  %
-%                                                        %
-% This work has the LPPL maintenance status "maintained".%
-%                                                        %
-% The Current Maintainer of this work                    %
-% is the TeX4ht Project.                                 %
-%                                                        %
-% If you modify this file your changing the signature    %
-% in \message{(signature)} below will be appreciated.    %
-%                                                        %
-%                                        tex4ht@tug.org  %
-%                             http://www.tug.org/tex4ht  %
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\immediate\write-1{version \ifx \JOBNAME\UnDefined ?version\else
-   |version\fi}
+%
+% This work may be distributed and/or modified under the
+% conditions of the LaTeX Project Public License, either
+% version 1.3c of this license or (at your option) any
+% later version. The latest version of this license is in
+%   http://www.latex-project.org/lppl.txt
+% and version 1.3c or later is part of all distributions
+% of LaTeX version 2005/12/01 or later.
+%
+% This work has the LPPL maintenance status "maintained".
+%
+% The Current Maintainer of this work
+% is the TeX4ht Project <http://tug.org/tex4ht>.
+% 
+% If you modify this program, changing the 
+% version identification would be appreciated.
+%
+\immediate\write-1{version \ifx \JOBNAME\UnDefined ?version\else |version\fi}
 ->>>
 
 \<perl copyright notice\><<<-
-#%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-# mk4ht                                 ?version %
-# Copyright (C) ?CopyYear.2003.               Eitan M. Gurari %
-#                                                        %
-#                                                        %
-# This work may be distributed and/or modified under the %
-# conditions of the LaTeX Project Public License, either %
-# version 1.3 of this license or (at your option) any    %
-# later version. The latest version of this license is   %
-# in                                                     %
-#   http://www.latex-project.org/lppl.txt                %
-# and version 1.3 or later is part of all distributions  %
-# of LaTeX version 2003/12/01 or later.                  %
-#                                                        %
-# This work has the LPPL maintenance status "maintained".%
-#                                                        %
-# The Current Maintainer of this work                    %
-# is the TeX4ht Project.                                 %
-#                                                        %
-# If you modify this file your changing the signature    %
-# in \message{(signature)} below will be appreciated.    %
-#                                                        %
-#                                        tex4ht@tug.org  %
-#                             http://www.tug.org/tex4ht  %
-#%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+# mk4ht (?version), generated from ?jobname.tex
+# Copyright (C) 2009, 2010 TeX Users Group.
+# Copyright (C) ?CopyYear.2003. Eitan M. Gurari
+#
+# This work may be distributed and/or modified under the
+# conditions of the LaTeX Project Public License, either
+# version 1.3 of this license or (at your option) any
+# later version. The latest version of this license is in
+#   http://www.latex-project.org/lppl.txt
+# and version 1.3 or later is part of all distributions
+# of LaTeX version 2003/12/01 or later.
+#
+# This work has the LPPL maintenance status "maintained"
+#
+# The Current Maintainer of this work
+# is the TeX4ht Project <http://tug.org/tex4ht>.
+#
+# If you modify this file your changing the signature
+# version identification be appreciated.
 ->>>
-
-
-
-
-
-
-
-
-
 
 
 
@@ -1930,13 +1872,3 @@ print "  clean.htlatex     lg tmp\n";
 
 \end{document}
 \endinput
-
-
-
-
-
-
-
-
-
-
