@@ -25,7 +25,6 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \<mozilla\><<<
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%  
 % mozilla.4ht (|version), generated from |jobname.tex
 % Copyright (C) 2009, 2010 TeX Users Group.
 % Copyright (C) |CopyYear.2000. Eitan M. Gurari, Paul Gartside
